src/objects/Customer_Services_Quality_Assurance__c.object
<CustomObject>
    <description>Scorecards for Customer service related quality checking activities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Services QA Checks</relationshipLabel>
        <relationshipName>Customer_Services_QA_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_any_changes_correctly__c</fullName>
        <inlineHelpText>Action any changes correctly</inlineHelpText>
        <label>Action any changes correctly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adhere_to_Treating_Customers_Fairly__c</fullName>
        <inlineHelpText>Adhere to Treating Customers Fairly</inlineHelpText>
        <label>Adhere to Treating Customers Fairly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Services_QA_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_established_that_it_was_convenient__c</fullName>
        <inlineHelpText>Agent established that it was convenient for the customer to continue the call</inlineHelpText>
        <label>Agent established that it was convenient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_all_the_customer_s_queries__c</fullName>
        <inlineHelpText>Answer all the customer’s queries correctly</inlineHelpText>
        <label>Answer all the customer’s queries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_all_the_customer_s_queries_correc__c</fullName>
        <inlineHelpText>Answer all the customer’s queries correctly</inlineHelpText>
        <label>Answer all customer’s queries correctly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_pace_and_tone__c</fullName>
        <inlineHelpText>Appropriate pace and tone for the customer</inlineHelpText>
        <label>Appropriate pace and tone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_pace_and_tone_for_customer__c</fullName>
        <inlineHelpText>Appropriate pace and tone for the customer</inlineHelpText>
        <label>Appropriate pace and tone for customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_open_and_close_questions__c</fullName>
        <inlineHelpText>Ask open and closed questions to establish potential discussion points</inlineHelpText>
        <label>Ask open and closed questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_open_and_closed_questions__c</fullName>
        <inlineHelpText>Ask open and closed questions in order to confirm
details</inlineHelpText>
        <label>Ask open and closed questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoid_giving_financial_advice__c</fullName>
        <inlineHelpText>Avoid giving financial advice</inlineHelpText>
        <label>Avoid giving financial advice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoid_long_pause_and_hesitations__c</fullName>
        <inlineHelpText>Avoid long pauses and hesitations</inlineHelpText>
        <label>Avoid long pauses &amp; hesitations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoid_long_pauses_and_hesitations__c</fullName>
        <inlineHelpText>Avoid long pauses and hesitations</inlineHelpText>
        <label>Avoid long pauses and hesitations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoid_using_jargon_and_specific_terms__c</fullName>
        <inlineHelpText>Avoid using jargon and company specific terms</inlineHelpText>
        <label>Avoid using jargon and specific terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Be_polite_and_professional_throughout__c</fullName>
        <inlineHelpText>Be polite and professional throughout the call</inlineHelpText>
        <label>Be polite and professional throughout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Be_polite_professional_throughout__c</fullName>
        <inlineHelpText>Be polite and professional throughout the call</inlineHelpText>
        <label>Be polite &amp; professional throughout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDevScore__c</fullName>
        <formula>(
IF(ISPICKVAL(  Used_appropriate_greeting__c  , &quot;2&quot;),2, if(ispickval( Used_appropriate_greeting__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Explain_the_reason_for_the_call__c  , &quot;2&quot;),2, if(ispickval( Explain_the_reason_for_the_call__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Confident_request_for_the_DPA__c  , &quot;2&quot;),2, if(ispickval( Confident_request_for_the_DPA__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Ask_open_and_close_questions__c, &quot;2&quot;),2, if(ispickval( Ask_open_and_close_questions__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Demonstrated_understanding_to_customer__c  , &quot;2&quot;),2, if(ispickval( Demonstrated_understanding_to_customer__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_of_verbal_nods__c  , &quot;2&quot;),2, if(ispickval( Use_of_verbal_nods__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Provide_customer_with_clear_explanation__c , &quot;2&quot;),2, if(ispickval( Provide_customer_with_clear_explanation__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Offer_all_relevant_information__c , &quot;2&quot;),2, if(ispickval( Offer_all_relevant_information__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Answer_all_the_customer_s_queries_correc__c  , &quot;2&quot;),2, if(ispickval( Answer_all_the_customer_s_queries_correc__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Check_the_customer_understands__c , &quot;2&quot;),2, if(ispickval( Check_the_customer_understands__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Provide_a_solution__c , &quot;2&quot;),2, if(ispickval( Provide_a_solution__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Be_polite_professional_throughout__c  , &quot;2&quot;),2, if(ispickval(Be_polite_professional_throughout__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Appropriate_pace_and_tone__c  , &quot;2&quot;),2, if(ispickval( Appropriate_pace_and_tone__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   React_to_customer__c , &quot;2&quot;),2, if(ispickval( React_to_customer__c, &quot;1&quot;),1,0))+
IF(ISPICKVAL(     Dont_interrupt_the_customer__c   , &quot;2&quot;),2, if(ispickval( Dont_interrupt_the_customer__c  , &quot;1&quot;),1,0))+
IF(ISPICKVAL(     Avoid_long_pause_and_hesitations__c   , &quot;2&quot;),2, if(ispickval( Avoid_long_pause_and_hesitations__c   , &quot;1&quot;),1,0))+
IF(ISPICKVAL(    Used_correct_hold_transfer_procedur__c  , &quot;2&quot;),2, if(ispickval( Used_correct_hold_transfer_procedur__c  , &quot;1&quot;),1,0))+

IF(ISPICKVAL(      Use_the_client_s_name_through_the_cal__c , &quot;2&quot;),2, if(ispickval( Use_the_client_s_name_through_the_cal__c  , &quot;1&quot;),1,0))+
IF(ISPICKVAL(     Close_thecall_appropriately__c , &quot;2&quot;),2, if(ispickval( Close_thecall_appropriately__c , &quot;1&quot;),1,0))+
IF(ISPICKVAL(     Offer_additionalAssistance__c, &quot;2&quot;),2, if(ispickval( Offer_additionalAssistance__c, &quot;1&quot;),1,0))+

IF(ISPICKVAL(      Se_realistic_timescales_when_applicable__c  , &quot;2&quot;),2, if(ispickval( Se_realistic_timescales_when_applicable__c, &quot;1&quot;),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDevScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPInboundMaxScore__c</fullName>
        <formula>IF(ISPICKVAL( Use_of_appropriate_greeting__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Mentioned_the_company_name__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Mention_of_agents_name__c , &quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Established_reason_for_the_call__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Ask_open_and_close_questions__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Demonstrated_understanding_to_customer__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_of_verbal_nods__c ,&quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Provides_customer_with_clear_explanation__c ,&quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Answer_all_the_customer_s_queries_correc__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Check_the_customer_understands__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Provide_a_solution__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Documents_in_correct_format__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Be_polite_professional_throughout__c , &quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Appropriate_pace_and_tone__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( React_to_customer__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Dont_interrupt_the_customer__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Avoid_long_pause_and_hesitations__c , &quot;N/A&quot;),0,2)+  

IF(ISPICKVAL( Used_correct_hold_transfer_procedur__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_the_client_s_name_through_the_cal__c ,&quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Close_thecall_appropriately__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Offer_additionalAssistance__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Se_realistic_timescales_when_applicable__c , &quot;N/A&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPInboundMaxScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPinboundPct__c</fullName>
        <label>CPinboundPct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CasePrepCaseMaxScore2__c</fullName>
        <formula>IF(ISPICKVAL( Documents_have_been_classified__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Task_notes_clear_and_accurate__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Document_meets_the_task_criteria__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Referred_to_Senior_UW_correct_notes__c ,&quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Email_states_correct_documents_needed__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Email_states_why_documents_unacceptable__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Professional_and_polite_communication__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_correct_grammar_and_punctuation__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Communication_noted_in_Tasks__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Correct_method_used_to_contact_customer__c , &quot;N/A&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCaseMaxScore2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasePrepCaseMaxScore__c</fullName>
        <formula>IF(ISPICKVAL( Documents_have_been_classified__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Task_notes_clear_and_accurate__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Document_meets_the_task_criteria__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Referred_to_Senior_UW_correct_notes__c ,&quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Email_states_correct_documents_needed__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Email_states_why_documents_unacceptable__c , &quot;N/A&quot;),0,2)+  
IF(ISPICKVAL( Professional_and_polite_communication__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_correct_grammar_and_punctuation__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Communication_noted_in_Tasks__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Correct_method_used_to_contact_customer__c , &quot;N/A&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCaseMaxScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasePrepCasePct__c</fullName>
        <formula>CasePrepCaseScore__c /  CasePrepCaseMaxScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCasePct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CasePrepCaseScore__c</fullName>
        <description>Calculation for Case Prep Case Score</description>
        <formula>IF(ISPICKVAL(  Documents_have_been_classified__c  , &quot;2&quot;),2, if(ispickval( Documents_have_been_classified__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Task_notes_clear_and_accurate__c , &quot;2&quot;),2, if(ispickval( Task_notes_clear_and_accurate__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Document_meets_the_task_criteria__c , &quot;2&quot;),2, if(ispickval( Document_meets_the_task_criteria__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Referred_to_Senior_UW_correct_notes__c , &quot;2&quot;),2, if(ispickval( Referred_to_Senior_UW_correct_notes__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Email_states_correct_documents_needed__c  , &quot;2&quot;),2, if(ispickval( Email_states_correct_documents_needed__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Email_states_why_documents_unacceptable__c , &quot;2&quot;),2, if(ispickval( Email_states_why_documents_unacceptable__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Professional_and_polite_communication__c , &quot;2&quot;),2, if(ispickval( Professional_and_polite_communication__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_correct_grammar_and_punctuation__c , &quot;2&quot;),2, if(ispickval( Use_correct_grammar_and_punctuation__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Communication_noted_in_Tasks__c , &quot;2&quot;),2, if(ispickval( Communication_noted_in_Tasks__c, &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(  Correct_method_used_to_contact_customer__c , &quot;2&quot;),2, if(ispickval( Correct_method_used_to_contact_customer__c, &quot;1&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCaseScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasePrepCaseSoftMaxScore__c</fullName>
        <formula>IF(ISPICKVAL( Email_states_correct_documents_needed__c , &quot;N/A&quot;),0,2)+
IF(ISPICKVAL( Email_states_why_documents_unacceptable__c , &quot;N/A&quot;),0,2)+
IF(ISPICKVAL( Professional_and_polite_communication__c , &quot;N/A&quot;),0,2)+
IF(ISPICKVAL( Use_correct_grammar_and_punctuation__c , &quot;N/A&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCaseSoftMaxScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasePrepCaseSoftSkillsPct__c</fullName>
        <formula>SoftSkillsScore__c  / CasePrepCaseSoftMaxScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePrepCaseSoftSkillsPct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Services QA Checks</relationshipLabel>
        <relationshipName>Customer_Services_QA_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_log_uploaded_with_relevant_notes__c</fullName>
        <inlineHelpText>Case log uploaded with relevant notes</inlineHelpText>
        <label>Case log uploaded with relevant notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CdevMaxScore__c</fullName>
        <formula>(
IF(ISPICKVAL( Used_appropriate_greeting__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Explain_the_reason_for_the_call__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Confident_request_for_the_DPA__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Ask_open_and_close_questions__c, &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Demonstrated_understanding_to_customer__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Use_of_verbal_nods__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Provide_customer_with_clear_explanation__c ,&quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Offer_all_relevant_information__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Answer_all_the_customer_s_queries_correc__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Check_the_customer_understands__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Provide_a_solution__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Be_polite_professional_throughout__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Appropriate_pace_and_tone__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( React_to_customer__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL(  Dont_interrupt_the_customer__c  , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Avoid_long_pause_and_hesitations__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Used_correct_hold_transfer_procedur__c , &quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Use_the_client_s_name_through_the_cal__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Close_thecall_appropriately__c , &quot;N/A&quot;),0,2)+ 
IF(ISPICKVAL( Offer_additionalAssistance__c, &quot;N/A&quot;),0,2)+ 

IF(ISPICKVAL( Se_realistic_timescales_when_applicable__c , &quot;N/A&quot;),0,2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CdevMaxScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CdevPct__c</fullName>
        <label>CdevPct</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Check_that_the_customer_understands__c</fullName>
        <inlineHelpText>Check that the customer understands</inlineHelpText>
        <label>Check that the customer understands</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_the_customer_understands__c</fullName>
        <inlineHelpText>Check that the customer understands</inlineHelpText>
        <label>Check the customer understands</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_and_understanding_tone__c</fullName>
        <inlineHelpText>Clear and understanding tone</inlineHelpText>
        <label>Clear and understanding tone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_the_call_appropriately__c</fullName>
        <inlineHelpText>Close the call appropriately</inlineHelpText>
        <label>Close the call appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_thecall_appropriately__c</fullName>
        <inlineHelpText>Close the call appropriately and offer contact details</inlineHelpText>
        <label>Closed the call appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_noted_in_Tasks__c</fullName>
        <inlineHelpText>Communication noted in Tasks</inlineHelpText>
        <label>Communication noted in Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_was_professional_polite__c</fullName>
        <inlineHelpText>Communication was professional, polite, no jargon and correct grammar used</inlineHelpText>
        <label>Communication was professional, polite,</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplaintsCallPct__c</fullName>
        <description>The percentage for a complaints call score case</description>
        <formula>ComplaintsCallScore__c /19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintsCallPct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ComplaintsCallScore__c</fullName>
        <formula>IF(ISPICKVAL(  Use_appropriate_greeting__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_mention_his_her_name_and__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  X2_Mention_the_company_name__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Where_necessary_did_the_agent_recap__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_us_eective_questioning_ski__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Did_the_agent_refer_to_any_notes_account__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(   Where_further_investigation_was_required__c   , &quot;No&quot;),0,1)+ 

IF(ISPICKVAL(  Did_the_agent_offer_appropriate_solution__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  did_the_agent_oer_the_cus__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Did_the_agent_provide_honest_explanation__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_acknowledge_the_mistake__c , &quot;No&quot;),0,1)+  
IF(ISPICKVAL(  Did_the_agent_avoid_interrupting__c , &quot;No&quot;),0,1)+ 

IF(ISPICKVAL(   Clear_and_understanding_tone__c  , &quot;No&quot;),0,1)+ 

IF(ISPICKVAL( Where_appropriate_did_the_agent_tell_th__c , &quot;No&quot;),0,1)+ 

IF(ISPICKVAL( Did_agent_abide_by_the_6_TCF_outcomes__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Did_agent_give_customer_their_FOS_rights__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Did_the_agent_remain_impartial__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Were_full_detailed_notes_left_on_account__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_close_the_call_appropriate__c  , &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintsCallScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliant_call__c</fullName>
        <label>Compliant call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confident_request_for_the_DPA__c</fullName>
        <inlineHelpText>Confident request for the DPA to be conducted</inlineHelpText>
        <label>Confident request for the DPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactDate__c</fullName>
        <label>ContactDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correct_method_used_to_contact_customer__c</fullName>
        <inlineHelpText>Correct method used to contact the customer</inlineHelpText>
        <label>Correct method used to contact customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_sign_off_used__c</fullName>
        <inlineHelpText>Did the agent sign off the correspondence mentioning his/her name and job role?</inlineHelpText>
        <label>Correct sign off used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CpInboundScore__c</fullName>
        <formula>IF(ISPICKVAL(  Use_of_appropriate_greeting__c , &quot;2&quot;),2, if(ispickval( Use_of_appropriate_greeting__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Mentioned_the_company_name__c , &quot;2&quot;),2, if(ispickval( Mentioned_the_company_name__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Mention_of_agents_name__c , &quot;2&quot;),2, if(ispickval( Mention_of_agents_name__c, &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(  Established_reason_for_the_call__c , &quot;2&quot;),2, if(ispickval( Established_reason_for_the_call__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Ask_open_and_close_questions__c , &quot;2&quot;),2, if(ispickval( Ask_open_and_close_questions__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Demonstrated_understanding_to_customer__c  , &quot;2&quot;),2, if(ispickval( Demonstrated_understanding_to_customer__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Use_of_verbal_nods__c , &quot;2&quot;),2, if(ispickval( Use_of_verbal_nods__c, &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(  Provides_customer_with_clear_explanation__c  , &quot;2&quot;),2, if(ispickval(  Provides_customer_with_clear_explanation__c , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Answer_all_the_customer_s_queries_correc__c , &quot;2&quot;),2, if(ispickval( Answer_all_the_customer_s_queries_correc__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(  Check_the_customer_understands__c , &quot;2&quot;),2, if(ispickval( Check_the_customer_understands__c , &quot;1&quot;),1,0))+
IF(ISPICKVAL(   Provide_a_solution__c  , &quot;2&quot;),2, if(ispickval( Provide_a_solution__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Documents_in_correct_format__c  , &quot;2&quot;),2, if(ispickval( Documents_in_correct_format__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Be_polite_professional_throughout__c  , &quot;2&quot;),2, if(ispickval( Be_polite_professional_throughout__c  , &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(   Appropriate_pace_and_tone__c  , &quot;2&quot;),2, if(ispickval( Appropriate_pace_and_tone__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   React_to_customer__c , &quot;2&quot;),2, if(ispickval( React_to_customer__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(    Dont_interrupt_the_customer__c  , &quot;2&quot;),2, if(ispickval(  Dont_interrupt_the_customer__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Avoid_long_pause_and_hesitations__c  , &quot;2&quot;),2, if(ispickval( Avoid_long_pause_and_hesitations__c, &quot;1&quot;),1,0))+ 

IF(ISPICKVAL(   Used_correct_hold_transfer_procedur__c , &quot;2&quot;),2, if(ispickval(  Used_correct_hold_transfer_procedur__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Use_the_client_s_name_through_the_cal__c  , &quot;2&quot;),2, if(ispickval( Use_the_client_s_name_through_the_cal__c  , &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(   Close_thecall_appropriately__c , &quot;2&quot;),2, if(ispickval( Close_thecall_appropriately__c, &quot;1&quot;),1,0))+
IF(ISPICKVAL(    Offer_additionalAssistance__c , &quot;2&quot;),2, if(ispickval(  Offer_additionalAssistance__c, &quot;1&quot;),1,0))+ 
IF(ISPICKVAL(     Se_realistic_timescales_when_applicable__c    , &quot;2&quot;),2, if(ispickval( Se_realistic_timescales_when_applicable__c, &quot;1&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CpInboundScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPA_checks_where_necessary__c</fullName>
        <label>DPA checks where necessary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPA_compliant__c</fullName>
        <inlineHelpText>DPA compliant</inlineHelpText>
        <label>DPA compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demonstrate_understanding_to_customer__c</fullName>
        <inlineHelpText>Demonstrate understanding to the customer</inlineHelpText>
        <label>Demonstrate understanding to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demonstrated_understanding_to_customer__c</fullName>
        <label>Demonstrated understanding to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_agent_abide_by_the_6_TCF_outcomes__c</fullName>
        <description>Did the agent abide by the six core TCF consumer outcomes? Outcome 1 - Consumers
can be confident that they are dealing with firms where the fair treatment of customers
is central to the corporate culture Outcome 2 - Products and services marketed and
sold in the retail market are designed to meet the needs of identified
consumer groups
and are targeted accordingly Outcome 3 - Consumers are provided with clear
information and kept appropriately informed before, during and after the point of sale
Outcome 4 - Where consumers receive advice, the advice is suitable and takes account
of their circumstances – NOT APPLICABLE AT ZOPA Outcome 5 - Consumers are
provided with products that perform as rms
have led them to expect, and the
associated service is of an acceptable standard and as they have been led to expect
Outcome 6 - Consumers do not face unreasonable post-sale barriers imposed by firms
to change product, switch provider, submit a claim or make a complaint</description>
        <label>Did agent abide by the 6 TCF outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_agent_answer_complainant_s_questions__c</fullName>
        <inlineHelpText>Did the agent answer the complainant’s questions correctly?</inlineHelpText>
        <label>Did agent answer complainant’s questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_agent_give_customer_their_FOS_rights__c</fullName>
        <inlineHelpText>Did the agent give the customer their FOS rights where appropriate?</inlineHelpText>
        <label>Did agent give customer their FOS rights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_agent_offer_additional_assistance__c</fullName>
        <inlineHelpText>Did the agent offer 
additional assistance where appropriate?</inlineHelpText>
        <label>Did agent offer additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_Bank_Statement_meet_the_criteria__c</fullName>
        <inlineHelpText>Did the Bank Statement meet the criteria for the Bank Check Task?</inlineHelpText>
        <label>Did the Bank Statement meet the criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_ID_document_meet_criteria__c</fullName>
        <inlineHelpText>Did the ID document meet criteria?</inlineHelpText>
        <label>Did the ID document meet criteria?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
</CustomObject>